<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/playerlistHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/playerlistHeader"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="@dimen/headerSize"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:fillViewport="true"
        android:padding="@dimen/playerlistMargin">
        <LinearLayout
            android:id="@+id/playerlistLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <Button
                    android:layout_marginTop="@dimen/playerlistMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addPlayer"
                    android:text="@string/addPlayer"
                    android:textAllCaps="true"
                    android:textSize="@dimen/buttonText"
                    />
                    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/startGameButton"
        android:textSize="@dimen/buttonText"
        android:textAllCaps="true"
        android:onClick="startGame"/>

</LinearLayout>