<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cardscorecounter.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/startMenuHeader"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:text="@string/headerText"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="@dimen/headerSize"
        android:fontFamily="monospace"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">


        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="24dp"
            android:text="@string/newGameButton"
            android:textSize="@dimen/buttonText"
            android:textAllCaps="true"
            android:onClick="startPlayerlist"
            />

        <Button
            android:id="@+id/buttonHowTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="24dp"
            android:text="@string/howToButton"
            android:textSize="@dimen/buttonText"
            android:textAllCaps="true"
            android:onClick="startHowTo"
            android:clickable="false"
            />
    </LinearLayout>

</LinearLayout>
